# ColSim

./: .clangd  .gitignore  CMakeLists.txt  README.md  setup.sh
Source/: CMakeLists.txt
Source/ColSim/src/: ColSim.cpp
Source/Core/inc/ColSim/Core/: Settings.hpp
Source/Core/src/: Settings.cpp
Source/Physics/: CMakeLists.txt
Source/Physics/inc/ColSim/: Physics.h
Source/Physics/inc/ColSim/Physics/: HardProcess.hpp  MonteCarlo.hpp  PhaseSpace.hpp
Source/Physics/src/: HardProcess.cpp  MonteCarlo.cpp  PhaseSpace.cpp
Tests/Test1/: main (DESKTOP-P37F373's conflicted copy 2025-02-20).cpp  main.cpp
examples/basic/: CMakeLists.txt  basic.cpp
examples/milestone3/: CMakeLists.txt  milestone3.cpp
examples/test/: lhapdf.cpp
inc/ColSim/: ColSim.hpp  Constants.hpp  Event.hpp  FourVector.hpp  HardProcess.hpp  LHEF.hpp  Logger.hpp  MonteCarlo.hpp  Particle.hpp  PhaseSpace.hpp  Settings.hpp  Utils.hpp
include/ColSim/: ColSim.hpp  Event.hpp  Gnuplot.hpp  HardProcess.hpp  Math.hpp  PartonShower.hpp  PhaseSpace.hpp  Settings.hpp  Types.hpp
include/colsim/: alphas.hpp  colsim.hpp  common.hpp  event.hpp  fourvector.hpp  gnuplot.hpp  hard_process.hpp  math.hpp  particle.hpp  parton_shower.hpp  phase_space.hpp  settings.hpp  utils.hpp
install/include/ColSim/: #PhaseSpace.hpp#  ColSim.hpp  Constants.hpp  Event.hpp  FourVector.hpp  Gnuplot.hpp  HardProcess.hpp  LHEF.hpp  Logger.hpp  Particle.hpp  PartonShower.hpp  Settings.hpp  Types.hpp  Utils.hpp
install/lib/cmake/ColSim/: ColSimConfig.cmake  ColSimTargets-noconfig.cmake  ColSimTargets.cmake
res/: config.in
share/cmake/: Config.cmake.in
src/: ColSim.cpp  Constants.cpp  Gnuplot.cpp  HardProcess.cpp  LHEFFile.cpp  Logger.cpp  Math.cpp  MonteCarlo.cpp  Particle.cpp  PartonShower.cpp  PhaseSpace.cpp  Process.cpp  Settings.cpp  Utils.cpp  alphas.cpp  colsim.cpp  fourvector.cpp  hard_process.cpp  math.cpp  parton_shower.cpp  phase_space.cpp  settings.cpp
tests/: CMakeLists.txt
tests/basic/: CMakeLists.txt  basic.cpp
tests/four-vector/: CMakeLists.txt  four-vector.cpp
tests/gnuplot/: CMakeLists.txt  gnuplot.cpp
tests/lhapdf/: CMakeLists.txt
tests/logger/: CMakeLists.txt  logger.cpp
tests/monte-carlo/: monte-carlo.cpp
tests/settings/: CMakeLists.txt  settings.cpp
tests/utilities/: CMakeLists.txt
